Fixed bug #72177 (Scope issue in __destruct after ReflectionProperty::setValue())